[defaults] Rename lib in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.11)
-project(mba VERSION 0.9.1 LANGUAGES C)
+project(libmba VERSION 0.9.1 LANGUAGES C)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 option(BUILD_SHARED_LIBS
@@ -53,8 +53,8 @@ set(
 )
 
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lutil")
 target_include_directories(${PROJECT_NAME} PRIVATE include)
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME mba CLEAN_DIRECT_OUTPUT 1)
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 target_include_directories(
@@ -65,15 +65,15 @@ target_include_directories(
 )
 
 install(
-  TARGETS ${PROJECT_NAME} EXPORT mba
+  TARGETS ${PROJECT_NAME}
+  EXPORT ${PROJECT_NAME} DESTINATION share/${PROJECT_NAME}/cmake
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+set_target_properties(
+  ${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}
+  ${PROJECT_NAME} PROPERTIES PREFIX "")
 
 install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
-
-install(EXPORT ${PROJECT_NAME} DESTINATION share/${PROJECT_NAME}/cmake)
-
-
 export(TARGETS ${PROJECT_NAME} FILE ${PROJECT_NAME}.cmake)
